Ajustes de deploy heroku... uhuuuuuuuugit add .git add .

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     },
     "scripts": {
         "post-install-cmd": [
+            "vendor/bin/phinx rollback -t=0",
             "vendor/bin/phinx migrate"
         ]
     }
