--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,7 @@
     "scripts": {
         "post-install-cmd": [
             "vendor/bin/phinx rollback -t=0",
-            "vendor/bin/phinx migrate",
-            "vendor/bin/phinx seed:run"
+            "vendor/bin/phinx migrate"
         ]
     }
 }
